--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -223,7 +223,7 @@
         <span th:text="#{prompt.video-not-supported}"></span>
       </video>
       <svg class="ply-btn" viewBox="0 0 24 24">
-        <!-- NOTE: cannot take advantage of <use> because the path cannot be animated -->
+        <!-- NOTE: Cannot take advantage of <use> because the path is animated -->
         <path d="M2,2 L2,22 L22,12 L22,12 Z M22,12 L22,12 L22,12 L22,12 Z"/>
       </svg>
       <progress max="100" value="0" class="prog-bar"></progress>
