--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -192,11 +192,9 @@
         </div>
         <div class="heart-static" sec:authorize="!isAuthenticated()" th:title="#{prompt.not-logged-in}"></div>
       </div>
-      <svg class="hot-icon" viewBox="0 0 71 90" th:if="${post.commentsCount} >= ${T(ir.ceno.model.Post).COMMENTS_COUNT_TO_BE_HOT}">
+      <svg class="hot-icon" viewBox="0 0 128 128" th:if="${post.commentsCount} >= ${T(ir.ceno.model.Post).COMMENTS_COUNT_TO_BE_HOT}">
         <title th:text="#{title.hot-post(${post.commentsCount})}">Hot!</title>
-        <path d="m 39.715,0 c 0,0 -5.776,3.879 -4.934,11.329 0.793,7.021 3.832,10.488 3.832,10.488 0,0 4.692,-3.166 2.183,-11.683 C 39.693,6.39 38.877,5.988 39.715,0 Z"></path>
-        <path d="m 46.902,13.322 c 0,0 0.441,2.288 -1.142,5.898 -1.586,3.608 2.197,6.776 2.197,6.776 0,0 5.722,-6.25 -1.055,-12.674 z"></path>
-        <path d="M 65.31,52.568 C 60.734,67.18 55.629,69.38 55.629,69.38 69.976,42.36 44.099,24.931 44.099,24.931 c 12.06,16.987 2.992,31.512 2.992,31.512 0,0 5.633,-12.06 -8.802,-24.733 C 22.184,16.834 30.191,4.601 30.191,4.601 16.023,9.441 15.582,22.205 18.483,27.309 26.846,41.215 23.59,47.995 23.59,47.995 23.413,44.913 21.126,42.624 13.91,37.431 6.691,32.238 11.177,22.732 11.177,22.732 6.516,25.637 2.378,35.142 8.011,41.745 18.309,54.595 9.771,61.988 9.771,61.988 13.204,47.729 0,44.56 0,44.56 10.211,52.834 0.795,58.996 2.377,68.675 5.369,91.474 31.599,89.98 31.599,89.98 c 0.747,-0.007 1.452,-0.053 2.166,-0.09 -9.865,-0.025 -12.61,-6.185 -10.173,-8.542 0,0 4.004,-3.469 -0.827,-9.497 -2.643,-3.101 -0.701,-7.56 1.486,-8.921 0,0 -2.105,4.459 1.281,6.896 3.387,2.437 4.461,3.509 4.542,4.955 0,0 1.528,-3.182 -2.396,-9.704 -1.361,-2.393 -1.155,-8.383 5.494,-10.653 0,0 -3.758,5.738 3.798,12.72 6.772,5.943 4.131,11.604 4.131,11.604 0,0 4.253,-6.814 -1.405,-14.786 0,0 12.143,8.18 5.412,20.855 0,0 -1.569,3.591 -7.495,4.726 C 67.716,85.39 65.31,52.568 65.31,52.568 Z"></path>
+        <use th:href="@{/img/icons.svg#hot}"></use>
       </svg>
       <div class="share-container">
         <svg class="share-icon" viewBox="0 0 128 128">
