Convert physical positioning properties to logical ones where possible
This makes it ready for the layout to be easily converted from LTR to RTL. The logical CSS properties for "left" and "right" are not yet fully supported in some browsers. So this commit adds TODOs for fixing "left" and "right" usages. When major browsers start supporting the logical alternatives (which are inset-inline-start and inset-inline-end), the TODOs could be resolved. After that, the layout will be almost completely ready for applying RTL direction just by adding "direction:rtl" to the rule *{...} when the layout is required to be in RTL direction.

--- a/src/main/resources/static/css/category.css
+++ b/src/main/resources/static/css/category.css
@@ -4,7 +4,7 @@
 
 .loader {
     height: 36px;
-    left: 50%;
+    left: 50%; /* TODO: Replace with inset-inline-start when major browsers start supporting it */
     position: absolute;
     transform: translate3d(-50%, -50%, 0);
     -moz-transform: translate3d(-50%, -50%, 0);
@@ -32,7 +32,7 @@
     background-color: var(--primary-color);
     display: block;
     height: 100%;
-    left: 0;
+    left: 0; /* TODO: Replace with inset-inline-start when major browsers start supporting it */
     position: absolute;
     top: 0;
     width: 100%;
