--- a/src/main/resources/static/css/post.css
+++ b/src/main/resources/static/css/post.css
@@ -1,6 +1,6 @@
 .page-container {
     display: grid;
-    margin-left: 16px;
+    margin-inline-start: 16px;
     grid-template-columns: 5fr 2fr;
     grid-gap: 16px;
 }
@@ -33,7 +33,7 @@
     display: flex;
     flex-flow: column;
     justify-content: center;
-    margin-right: 24px;
+    margin-inline-end: 24px;
 }
 
 .article-title {
@@ -56,13 +56,13 @@
 }
 
 .subheading .creator-name {
-    margin-left: 8px;
+    margin-inline-start: 8px;
 }
 
 .subheading .card-date {
     color: #757575;
     font-size: 12px;
-    margin-left: 24px;
+    margin-inline-start: 24px;
 }
 
 .creator {
@@ -105,7 +105,7 @@
 
 .chng-cats-icon {
     height: 15px;
-    margin-left: -1px;
+    margin-inline-start: -1px;
 }
 
 .chng-cats-icon:not(.disabled):hover {
@@ -125,7 +125,7 @@
     background: white;
     border-radius: 2px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 -1px 4px 0 rgba(0, 0, 0, 0.2);
-    left: calc(50% - 26px);
+    left: calc(50% - 26px); /* TODO: Replace with inset-inline-start when major browsers start supporting it */
     opacity: 0;
     position: absolute;
     top: 42px;
@@ -142,7 +142,7 @@
     border-width: 0 9px 9px 9px;
     content: '';
     position: absolute;
-    right: calc(50% - 9px);
+    right: calc(50% - 9px); /* TODO: Replace with inset-inline-end when major browsers start supporting it */
     top: -8px;
     z-index: -1;
 }
@@ -155,7 +155,7 @@
 
 .changeable-cat {
     margin: 0 12px;
-    padding-right: 25px;
+    padding-inline-end: 25px;
 }
 
 .cat-del {
@@ -175,7 +175,7 @@
     font-size: 12px;
     height: 14px;
     position: absolute;
-    right: 18px;
+    right: 18px; /* TODO: Replace with inset-inline-end when major browsers start supporting it */
     text-align: center;
     top: 6px;
     width: 14px;
@@ -191,7 +191,7 @@
 
 .cat-add input {
     margin-bottom: 8px;
-    padding-left: 4px;
+    padding-inline-start: 4px;
     width: 80px;
 }
 
@@ -203,7 +203,7 @@
     font-size: 12px;
     height: 13px;
     position: absolute;
-    right: 7px;
+    right: 7px; /* TODO: Replace with inset-inline-end when major browsers start supporting it */
     text-align: center;
     top: 5px;
     width: 13px;
@@ -230,7 +230,7 @@
     align-items: center;
     justify-content: center;
     margin-top: -18px;
-    margin-left: 20px;
+    margin-inline-start: 20px;
 }
 
 .likes,
@@ -246,19 +246,17 @@
 
 .comm-count span {
     font-size: 12px;
-    padding-right: 10px;
+    padding-inline-end: 10px;
 }
 
 .comm-count-img {
-    direction: rtl;
-    margin-right: 22px;
+    margin-inline-end: 22px;
     margin-top: 1px;
     width: 15px;
 }
 
 .visits-count-img {
-    direction: rtl;
-    margin-right: 20px;
+    margin-inline-end: 20px;
     width: 18px;
 }
 
@@ -268,7 +266,7 @@
 
 .visits-count span {
     font-size: 12px;
-    padding-right: 10px;
+    padding-inline-end: 10px;
 }
 
 .actions {
@@ -284,7 +282,7 @@
 
 .article-share {
     display: flex;
-    margin-left: 10px;
+    margin-inline-start: 10px;
 }
 
 .article-share a {
@@ -292,7 +290,7 @@
     background-color: rgba(224,224,224,0.8);
     border-radius: 2px;
     display: flex;
-    margin-right: 12px;
+    margin-inline-end: 12px;
     padding: 3px 12px;
     transition: all ease 0.1s;
 }
@@ -362,7 +360,7 @@
 .comment {
     align-items: start;
     background-color: #fcfcfc;
-    border-left: 3px solid #d0d0d0;
+    border-inline-start: 3px solid #d0d0d0;
     display: flex;
     margin-top: 20px;
 }
