--- a/src/main/resources/static/css/post.css
+++ b/src/main/resources/static/css/post.css
@@ -125,7 +125,7 @@
     background: white;
     border-radius: 2px;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26), 0 -1px 4px 0 rgba(0, 0, 0, 0.2);
-    left: calc(50% - 26px); /* TODO: Replace with inset-inline-start when major browsers start supporting it */
+    inset-inline-start: calc(50% - 26px);
     opacity: 0;
     position: absolute;
     top: 42px;
@@ -142,7 +142,7 @@
     border-width: 0 9px 9px 9px;
     content: '';
     position: absolute;
-    right: calc(50% - 9px); /* TODO: Replace with inset-inline-end when major browsers start supporting it */
+    inset-inline-end: calc(50% - 9px);
     top: -8px;
     z-index: -1;
 }
@@ -175,7 +175,7 @@
     font-size: 12px;
     height: 14px;
     position: absolute;
-    right: 18px; /* TODO: Replace with inset-inline-end when major browsers start supporting it */
+    inset-inline-end: 18px;
     text-align: center;
     top: 6px;
     width: 14px;
@@ -203,7 +203,7 @@
     font-size: 12px;
     height: 13px;
     position: absolute;
-    right: 7px; /* TODO: Replace with inset-inline-end when major browsers start supporting it */
+    inset-inline-end: 7px;
     text-align: center;
     top: 5px;
     width: 13px;
